--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section>
         <div id="title">
           <h1>VS</h1>
-          <p>Embedded audio player/treamer</p>
+          <p>My adventures with embedded audio</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/vasileioss">vasileioss</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
